--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=base64:xLth9V1vdn0j21l9ejOjfy7xffgccEr3BhxVMmJOp+0=
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
